[package]
name = "analytics-next"
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"

description = "Rust wrapper @segment/analytics-next"
repository = "https://github.com/ctron/analytics-next-rs"
categories = ["wasm", "web-programming"]
keywords = ["wasm", "segment", "analytics", "web"]

readme = "README.md"

[dependencies]
gloo-utils = "0.2"
js-sys = "0.3.64"
serde = { version = "1", features = ["derive" ] }
serde_json = "1"
wasm-bindgen = "0.2.87"

analytics-next-sys = { version = "0.1.6", path = "analytics-next-sys" }
analytics-next-macro = { version = "0.1.6", path = "analytics-next-macro" }

[workspace]
members = [
    "analytics-next-sys",
    "analytics-next-macro",
]

[dependencies.web-sys]
version = "0.3"

[package.metadata.docs.rs]
all-features = true

[workspace.metadata.release]
tag-name = "v{{version}}"
