[package]
name = "analytics-next-macro"
version = "0.1.4"
edition = "2021"

license = "Apache-2.0"
description = "Derive to create tracking events for analytics-next"
repository = "https://github.com/ctron/analytics-next-rs"
categories = ["wasm", "web-programming"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = "2.0.48"
quote = "1.0"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
