[package]
name = "analytics-next-sys"
version = "0.1.4"
edition = "2021"

license = "Apache-2.0"
description = "WebAssembly bindings for @segment/analytics-next"
repository = "https://github.com/ctron/analytics-next-rs"
categories = ["wasm", "web-programming"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Node"
]
