[package]
name = "yew"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
description = "Example of the analytics-next crate"
repository = "https://github.com/ctron/analytics-next-rs"

[dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
gloo-events = "0.1"
gloo-utils = "0.1"
js-sys = "0.3.64"
serde_json = "1"

yew = { version = "0.20", features = ["csr"] }

analytics-next = { path = "../.." }
analytics-next-sys = { path = "../../analytics-next-sys" }

[workspace]

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlElement",
]